# OpenGuardIT

./: .gitmodules  README.md  package-lock.json  temporary_database.db
backend/: CMakeLists.txt  config.json
backend/include/utils/: logger.h
backend/src/: main.cpp
backend/src/utils/: logger.cpp
cli/: cli  cli.cpp
frontend/: package-lock.json
frontend/src/: App.js  index.js
frontend/src/utils/: logger.js
